--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "pokenode-ts": "^1.17.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-toastify": "^9.0.3",
     "typescript": "4.9.5",
     "zod": "^3.20.6"
   },
