--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+DATABASE_URL='mysql://jyt4ssllnstmf9uzfcsa:pscale_pw_agUtXaVsvj5Xbvvf26vTsB3QI9qc8uwHCAlMGe6kNvq@us-east.connect.psdb.cloud/pokemon-compare?sslaccept=strict'
