--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^4.11.0",
     "@rooks/use-window-size": "^4.11.2",
     "@tanstack/react-query": "^4.24.10",
     "@trpc/client": "^10.14.0",
